--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <h2>Latest Reviews</h2>
                 <div class="movie-grid">
                     <article>
-                        <div class="movie-poster" style="background-image: url('picture/movie1.webp');"></div>
+                        <div class="movie-poster" style="background-image: url('picture/Movie1.webp');"></div>
                         <div class="movie-info">
                             <h3>007: ThunderBall (1965)</h3>
                             <p><strong>Rating:</strong> ★★★★★</p>
