--- a/index.html
+++ b/index.html
@@ -5,16 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rotten Bananas - Movie Reviews</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Rotten Bananas</h1>
+        <a href="" class="img logo">
+            <img src="picture/movie review logo.png" alt="logo">
+        </a>
         <nav>
             <ul>
-                <li><a href="#reviews">Home</a></li>
-                <li><a href="#about">About Us</a></li>
+                <li><a href="#category">Catergory</a></li>
+                <li><a href="#trending">Trending</a></li>
             </ul>
         </nav>
+        <form action="" class="navbar-form">
+            <input type="text" name="search" id="" class="navbar-searchbar">
+            <button>
+                <span class="material-symbols-outlined">
+                search
+                </span>
+            </button>
+        </form>
+        <div class="auth">
+            <a href="#" class="signup">
+                <span>Sign up</span>
+            </a>
+            <a href="#" class="login">
+                <span>Log in</span>
+            </a>
+        </div>
     </header>
 
     <!-- Genre Banner -->
@@ -25,8 +47,7 @@
             <li><a href="#">Drama</a></li>
             <li><a href="#">Horror</a></li>
             <li><a href="#">Sci-Fi</a></li>
-            <li><a href="#">Thriller</a></li>
-            <li><a href="#">Adventure</a></li>
+            <li><a href="#">Fantasy</a></li>
         </ul>
     </div>
 
@@ -56,15 +77,13 @@
             </section>
         </main>
 
-        <!-- Bottom Section -->
-        <section id="about" class="about-section">
-            <h2>About Us</h2>
-            <p>Welcome to Rotten Bananas! Your trusted source for honest and insightful movie reviews.</p>
-        </section>
     </div>
 
     <footer>
-        <p>&copy; 2024 Rotten Bananas</p>
+        <h2>About Us</h2>
+        <p>
+            Contact Info: <br> (Direct Phone Number: 0915733659) <br> Hotline: 1900 6666 <br> Facebook: R&B Series (https://www.facebook.com/RBseries) <br> Address: 12D Funky Street
+        </p>
     </footer>
 </body>
 </html>
