--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <footer>
         <h2>About Us</h2>
         <p>
-            Contact Info: <br> (Direct Phone Number: 0915733659) <br> Hotline: 1900 6666 <br> Facebook: R&B Series (https://www.facebook.com/RBseries) <br> Address: 12D Funky Street
+            Contact Info: <br> Hotline: 1900 6666 <br> Email: rottenbananas@gmail.com <br> Address: 12D Funky Street
         </p>
     </footer>
 </body>
