--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             </button>
         </form>
         <div class="auth">
-            <a href="#" class="signup">
+            <a href="https://onion-mmmmm.github.io/RottenBananas.online-signup/" class="signup">
                 <span>Sign up</span>
             </a>
-            <a href="#" class="login">
+            <a href="https://onion-mmmmm.github.io/RottenBananas.online-login/" class="login">
                 <span>Log in</span>
             </a>
         </div>
