--- a/index.html
+++ b/index.html
@@ -1,42 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rotten Bananas - Movie Reviews</title>
+    <title>Action movies</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=search" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <a href="" class="img logo">
+        <a href="" class="logo">
             <img src="picture/movie review logo.png" alt="logo">
         </a>
-        <nav>
-            <ul>
-                <li><a href="#category">Catergory</a></li>
-                <li><a href="#trending">Trending</a></li>
-            </ul>
-        </nav>
         <form action="" class="navbar-form">
-            <input type="text" name="search" id="" class="navbar-searchbar">
+            <input type="text" name="search" id="" placeholder="Search" class="navbar-searchbar">
             <button>
                 <span class="material-symbols-outlined">
                 search
                 </span>
             </button>
         </form>
-        <div class="auth">
-            <a href="https://onion-mmmmm.github.io/RottenBananas.online-signup/" class="signup">
-                <span>Sign up</span>
+            <a href="https://onion-mmmmm.github.io/RottenBananas.online-login/" class="signup">
+                <span>Sign in</span>
+                <button>
+                    <span class="material-symbols-outlined">
+                        login
+                    </span>
+                </button>
             </a>
-            <a href="https://onion-mmmmm.github.io/RottenBananas.online-login/" class="login">
-                <span>Log in</span>
-            </a>
-        </div>
     </header>
 
     <!-- Genre Banner -->
@@ -50,19 +44,26 @@
             <li><a href="#">Fantasy</a></li>
         </ul>
     </div>
-
+    <div class="Title"><h1>Action</h1></div>
     <div class="container">
         <!-- Main Content -->
         <main class="main-content">
             <section id="reviews">
-                <h2>Latest Reviews</h2>
                 <div class="movie-grid">
-                    <article>
-                        <div class="movie-poster" style="background-image: url('picture/Movie1.jpg');"></div>
+                    <article onclick="location.href='bourne_identity.html';">
+                        <div class="movie-poster" style="background-image: url('picture/the bourne identity.jpg');"></div>
                         <div class="movie-info">
-                            <h3>007: ThunderBall (1965)</h3>
+                            <h3>The Bourne Identity</h3>
+                            <p><strong>Rating:</strong> ★★★★☆</p>
+                            <p>An intriguing action film with a grittier, more realistic style. Matt Damon shines as Jason Bourne, an amnesiac uncovering his past while evading assassins. Its grounded action, intense car chases, and smart storytelling make it a standout spy thriller.</p>
+                        </div>
+                    </article>
+                    <article onclick="location.href='die_hard.html';">
+                        <div class="movie-poster" style="background-image: url('picture/Movie2.jpg');"></div>
+                        <div class="movie-info">
+                            <h3>Die Hard (1988)</h3>
                             <p><strong>Rating:</strong> ★★★★★</p>
-                            <p>"Thunderball" is the fourth entry in the iconic James Bond franchise, continuing the suave and thrilling escapades of 007, played by Sean Connery.</p>
+                            <p>A quintessential action film, "Die Hard" set the gold standard for both the genre and Christmas movies. Bruce Willis’ portrayal of wisecracking NYPD officer John McClane is iconic.</p>
                         </div>
                     </article>
                     <article>
@@ -76,14 +77,13 @@
                 </div>
             </section>
         </main>
-
     </div>
-
-    <footer>
-        <h2>About Us</h2>
-        <p>
-            Contact Info: <br> Hotline: 1900 6666 <br> Email: rottenbananasRBseries@gmail.com <br> Address: 12D Funky Street
-        </p>
-    </footer>
+    <script src="script.js"></script>
 </body>
+<footer>
+    <h2>About Us</h2>
+    <p>
+        Hotline: 1900 6666 <br> Email: rottenbananasRBseries@gmail.com <br> Address: 12D Funky Street
+    </p>
+</footer>
 </html>
