--- a/Horror.html
+++ b/Horror.html
@@ -36,7 +36,7 @@
     <!-- Genre Banner -->
     <div class="genre-banner">
         <ul>
-            <li><a href="action.html">Action</a></li> <!-- Updated to point to horror.html -->
+            <li><a href="index.html">Action</a></li> <!-- Updated to point to horror.html -->
             <li><a href="#">Comedy</a></li>
             <li><a href="#">Drama</a></li>
             <li><a href="horror.html">Horror</a></li> <!-- Updated to point to horror.html -->
