--- a/bourne_identity.html
+++ b/bourne_identity.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Bourne Identity - Movie Review</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesformovie.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 </head>
 <body>
@@ -34,10 +34,10 @@
     <!-- Main Content -->
     <div class="genre-banner">
         <ul>
-            <li><a href="#">Action</a></li>
+            <li><a href="index.html">Action</a></li> <!-- Updated to point to horror.html -->
             <li><a href="#">Comedy</a></li>
             <li><a href="#">Drama</a></li>
-            <li><a href="#">Horror</a></li>
+            <li><a href="horror.html">Horror</a></li> <!-- Updated to point to horror.html -->
             <li><a href="#">Sci-Fi</a></li>
             <li><a href="#">Fantasy</a></li>
         </ul>
