--- a/horror.html
+++ b/horror.html
@@ -36,12 +36,12 @@
     <!-- Genre Banner -->
     <div class="genre-banner">
         <ul>
-            <li><a href="index.html">Action</a></li> <!-- Updated to point to horror.html -->
-            <li><a href="#">Comedy</a></li>
-            <li><a href="#">Drama</a></li>
-            <li><a href="horror.html">Horror</a></li> <!-- Updated to point to horror.html -->
-            <li><a href="#">Sci-Fi</a></li>
-            <li><a href="#">Fantasy</a></li>
+                <li><a href="index.html">Action</a></li> <!-- Updated to point to horror.html -->
+                <li><a href="comedy.html">Comedy</a></li>
+                <li><a href="drama.html">Drama</a></li>
+                <li><a href="horror.html">Horror</a></li> <!-- Updated to point to horror.html -->
+                <li><a href="sci-fi.html">Sci-Fi</a></li>
+                <li><a href="fantasy.html">Fantasy</a></li>
         </ul>
     </div>
     <div class="Title"><h1>Horror</h1></div>
