--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <a href="" class="logo">
             <img src="picture/movie review logo.png" alt="logo">
         </a>
+        <nav>
+            <h2>Rotten Bananas</h2>
+        </nav>
         <form action="" class="navbar-form">
             <input type="text" name="search" id="" placeholder="Search" class="navbar-searchbar">
             <button>
@@ -42,7 +45,6 @@
                 <li><a href="horror.html">Horror</a></li> <!-- Updated to point to horror.html -->
                 <li><a href="sci-fi.html">Sci-Fi</a></li>
                 <li><a href="fantasy.html">Fantasy</a></li>
-            
         </ul>
     </div>
     <div class="Title"><h1>Action</h1></div>
