--- a/die_hard.html
+++ b/die_hard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Bourne Identity - Movie Review</title>
+    <title>Die Hard - Movie Review</title>
     <link rel="stylesheet" href="stylesformovie.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 </head>
@@ -59,7 +59,7 @@
 
             <!-- Movie Info Section -->
             <div class="movie-info">
-                <h1>The Bourne Identity</h1>
+                <h1>Die Hard</h1>
                 <p><strong>Rating:</strong> ★★★★☆</p>
                 <p><strong>Genre:</strong> Action, Thriller</p>
                 <p><strong>Release Date:</strong> June 14, 2002</p>
