--- a/fantasy.html
+++ b/fantasy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comedy movies</title>
+    <title>Fantasy movies</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,6 +15,9 @@
         <a href="" class="logo">
             <img src="picture/movie review logo.png" alt="logo">
         </a>
+        <nav>
+            <h2>Rotten Bananas</h2>
+        </nav>
         <form action="" class="navbar-form">
             <input type="text" name="search" id="" placeholder="Search" class="navbar-searchbar">
             <button>
@@ -44,13 +47,13 @@
                 <li><a href="fantasy.html">Fantasy</a></li>
         </ul>
     </div>
-    <div class="Title"><h1>Horror</h1></div>
+    <div class="Title"><h1>Fantasy</h1></div>
     <div class="container">
         <!-- Main Content -->
         <main class="main-content">
             <section id="reviews">
                 <div class="movie-grid">
-                    <article>
+                    <article onclick="location.href='the_exorcist.html';">
                         <div class="movie-poster" style="background-image: url('picture/Exorccist.jpg');"></div>
                         <div class="movie-info">
                             <h3>The Exorcist (1973)</h3>
@@ -58,7 +61,7 @@
                             <p>The Exorcist is a landmark horror film that masterfully blends psychological depth with supernatural terror. Centered on a young girl’s demonic possession and two priests’ desperate fight to save her, it features chilling performances and an unsettling atmosphere. Iconic effects and haunting sound design make it a timeless benchmark of fear.</p>
                         </div>
                     </article>
-                    <article>
+                    <article onclick="location.href='the_shining.html';">
                         <div class="movie-poster" style="background-image: url('picture/The shining.jpg');"></div>
                         <div class="movie-info">
                             <h3>The Shining (1980)</h3>
