--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <a href="" class="logo">
+        <a href="index.html" class="logo">
             <img src="picture/movie review logo.png" alt="logo">
         </a>
         <nav>
@@ -24,7 +24,7 @@
             <input type="text" name="search" id="" placeholder="Search" class="navbar-searchbar">
             <button>
                 <span class="material-symbols-outlined">
-                search
+                    search
                 </span>
             </button>
         </form>
@@ -63,7 +63,7 @@
                             <p>An intriguing action film with a grittier, more realistic style. Matt Damon shines as Jason Bourne, an amnesiac uncovering his past while evading assassins. Its grounded action, intense car chases, and smart storytelling make it a standout spy thriller.</p>
                         </div>
                     </article>
-                    <article>
+                    <article onclick="location.href='die_hard.html';">
                         <div class="movie-poster" style="background-image: url('picture/sống dai.jpg');"></div>
                         <div class="movie-info">
                             <h3>Die Hard (1988)</h3>
