--- a/the_shining.html
+++ b/the_shining.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Bourne Identity - Movie Review</title>
+    <title>The Shining - Movie Review</title>
     <link rel="stylesheet" href="stylesformovie.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 </head>
@@ -50,21 +50,18 @@
         <div class="movie-review">
             <!-- Video Section -->
             <div class="movie-trailer">
-                <iframe width="420" height="315" src="https://www.youtube.com/embed/VL5MFvyvg0c" 
+                <iframe width="420" height="315" src="https://www.youtube.com/embed/QyoKheS5NFQ?si=WBLEf1Ee0Xuzh1EN" 
                     frameborder="0" allowfullscreen 
-                    title="The Bourne Identity Trailer" frameborder="0" 
+                    title="the_exorcist Trailer" frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen></iframe>
             </div>
 
             <!-- Movie Info Section -->
             <div class="movie-info">
-                <h1>The Bourne Identity</h1>
-                <p><strong>Rating:</strong> ★★★★☆</p>
-                <p><strong>Genre:</strong> Action, Thriller</p>
-                <p><strong>Release Date:</strong> June 14, 2002</p>
-                <p><strong>Director:</strong> Doug Liman</p>
-                <p>An intriguing action film with a grittier, more realistic style. Matt Damon shines as Jason Bourne, an amnesiac uncovering his past while evading assassins. Its grounded action, intense car chases, and smart storytelling make it a standout spy thriller.</p>
+                <h3>The Shining (1980)</h3>
+                <p><strong>Rating:</strong> ★★★★★</p>
+                <p>The Shining is a masterful psychological horror film directed by Stanley Kubrick, featuring Jack Nicholson’s unforgettable portrayal of a writer spiraling into madness. Set in the eerie Overlook Hotel, the film’s haunting visuals, unsettling score, and sense of isolation create a deeply unnerving experience. Kubrick’s meticulous direction and the film’s layers of ambiguity make it a timeless classic. </p>
             </div>
         </div>
     </div>
