--- a/fantasy.html
+++ b/fantasy.html
@@ -53,44 +53,44 @@
         <main class="main-content">
             <section id="reviews">
                 <div class="movie-grid">
-                    <article onclick="location.href='the_exorcist.html';">
-                        <div class="movie-poster" style="background-image: url('picture/Exorccist.jpg');"></div>
+                    <article onclick="location.href='superbad.html';">
+                        <div class="movie-poster" style="background-image: url('picture/Superbad.jpg');"></div>
                         <div class="movie-info">
-                            <h3>The Exorcist (1973)</h3>
+                            <h3>Superbad (2007)</h3>
                             <p><strong>Rating:</strong> ★★★★★ </p>
-                            <p>The Exorcist is a landmark horror film that masterfully blends psychological depth with supernatural terror. Centered on a young girl’s demonic possession and two priests’ desperate fight to save her, it features chilling performances and an unsettling atmosphere. Iconic effects and haunting sound design make it a timeless benchmark of fear.</p>
+                            <p>"Superbad" is a high school coming-of-age comedy that became an instant classic for its hilarious blend of raunchy humor and genuine heart. The story follows two socially awkward friends, Seth (Jonah Hill) and Evan (Michael Cera), as they navigate the final days of high school and try to secure alcohol for a party in hopes of impressing girls. What makes Superbad so memorable is the chemistry between Hill and Cera, who capture the awkwardness and anxiety of adolescence with perfect comedic timing. The film is packed with laugh-out-loud moments, from Seth’s wild antics to the absurd situations the duo finds themselves in. Seth Rogen and Evan Goldberg’s script is sharp, offering a perfect mix of juvenile humor and moments of unexpected emotional depth. Supporting characters like the overly confident Fogell (played by Christopher Mintz-Plasse) and the hilarious police officers (played by Rogen and Bill Hader) add even more comedic flavor. Superbad is a raunchy, sweet, and downright funny exploration of friendship, first love, and the trials of growing up.</p>
                         </div>
                     </article>
-                    <article onclick="location.href='the_shining.html';">
-                        <div class="movie-poster" style="background-image: url('picture/The shining.jpg');"></div>
+                    <article onclick="location.href='groundhog_day.html';">
+                        <div class="movie-poster" style="background-image: url('picture/Groundhog Day.jpg');"></div>
                         <div class="movie-info">
-                            <h3>The Shining (1980)</h3>
+                            <h3>Groundhog Day (1993)</h3>
                             <p><strong>Rating:</strong> ★★★★★</p>
-                            <p>The Shining is a masterful psychological horror film directed by Stanley Kubrick, featuring Jack Nicholson’s unforgettable portrayal of a writer spiraling into madness. Set in the eerie Overlook Hotel, the film’s haunting visuals, unsettling score, and sense of isolation create a deeply unnerving experience. Kubrick’s meticulous direction and the film’s layers of ambiguity make it a timeless classic. </p>
+                            <p>"Groundhog Day" is a comedy that transcends its premise, which is as simple as it is brilliant: a cynical weatherman, Phil Connors (Bill Murray), finds himself reliving the same day—February 2nd—over and over again while covering the Groundhog Day festivities in Punxsutawney, Pennsylvania. The film effortlessly balances absurd humor with profound philosophical musings, making it a perfect blend of slapstick and existential reflection. Murray’s performance is legendary, with his transition from frustrated disbelief to acceptance and eventual self-improvement being both hilarious and touching. The repetitive nature of the premise should make the film stale, but it’s actually quite the opposite—each iteration of the day reveals new layers to Phil’s character. The film is a clever exploration of time, change, and the potential for personal growth, all wrapped in a charming, witty package. It’s no wonder Groundhog Day has become a beloved classic that continues to resonate with audiences even decades later.</p>
                         </div>
                     </article>
-                    <article>
-                        <div class="movie-poster" style="background-image: url('picture/A night on elm street.jpg');"></div>
+                    <article onclick="location.href='groundhog_day.html';">
+                        <div class="movie-poster" style="background-image: url('picture/The Big Lebowski.jpg');"></div>
                         <div class="movie-info">
-                            <h3>A Nightmare on Elm Street (1984)</h3>
+                            <h3>The Big Lebowski (1998)</h3>
                             <p><strong>Rating:</strong> ★★★★☆</p>
-                            <p>Wes Craven’s A Nightmare on Elm Street redefined the slasher genre with its terrifying premise of a killer who haunts and murders teens in their dreams. Robert Englund’s Freddy Krueger blends menace and dark humor, making him an unforgettable villain. With surreal dream sequences and a clever twist ending, the film remains a cult classic and a standout in horror history. </p>
+                            <p>The Coen Brothers’ The Big Lebowski is a cult classic that defies genre conventions and delivers a quirky, offbeat comedy filled with eccentric characters and bizarre situations. Jeff Bridges stars as Jeffrey Lebowski, aka "The Dude," a laid-back slacker who gets mistaken for a wealthy man with the same name. What follows is a series of increasingly absurd events as The Dude gets caught up in a kidnapping scheme, all while maintaining his chilled-out lifestyle. The film is a masterclass in character-driven comedy, with standout performances from Bridges as the perpetually stoned protagonist, and John Goodman as his volatile friend Walter. The Coens’ signature sharp dialogue and dark humor are on full display, as The Dude’s absurd misadventures unfold against a backdrop of oddball characters and surreal scenarios. The Big Lebowski is less about a coherent plot and more about the wild, hilarious journey of its characters. It’s a film that you’ll find yourself returning to again and again, each time picking up on new details and jokes.</p>
                         </div>
                     </article>
-                    <article>
-                        <div class="movie-poster" style="background-image: url('picture/Get out.jpg');"></div>
+                    <article onclick="location.href='groundhog_day.html';">
+                        <div class="movie-poster" style="background-image: url('picture/Anchorman: The Legend of Ron Burgundy.jpg');"></div>
                         <div class="movie-info">
-                            <h3>Get Out (2017)</h3>
+                            <h3>Anchorman: The Legend of Ron Burgundy (2004)</h3>
                             <p><strong>Rating:</strong> ★★★★★</p>
-                            <p> *Jordan Peele’s Get Out* is a brilliant blend of social commentary and psychological horror, exploring race relations in modern America. The film follows Chris, a Black man uncovering a chilling secret at his white girlfriend’s family estate. With exceptional performances and a gripping storyline, Peele’s film is both unsettling and thought-provoking, cementing its place as a modern horror masterpiece. </p>
+                            <p>Anchorman is an over-the-top, absurd comedy that thrives on its quirky, outlandish characters and rapid-fire gags. Will Ferrell stars as Ron Burgundy, a pompous and clueless news anchor in 1970s San Diego who finds his dominance challenged by a new female reporter, Veronica Corningstone (Christina Applegate). The film is a showcase for Ferrell’s particular brand of manic comedy, which works especially well when paired with a stellar ensemble cast that includes Paul Rudd, Steve Carell, and David Koechner. The script is filled with ridiculous one-liners, running gags, and sheer silliness, from the infamous "I’m kind of a big deal" to the epic "News Team Battle." Anchorman is a parody of 1970s news culture, but it’s also an exercise in absurdity and comedic bravado. It’s hard to overstate how much fun this film is, especially with Ferrell’s over-the-top performance as the oblivious and clueless Ron Burgundy. It’s the kind of comedy that can make you laugh until it hurts, and it’s packed with so many quotable moments that it has become a part of modern pop culture.</p>
                         </div>
                     </article>
-                    <article>
-                        <div class="movie-poster" style="background-image: url('picture/Di truyền.jpg');"></div>
+                    <article onclick="location.href='groundhog_day.html';">
+                        <div class="movie-poster" style="background-image: url('picture/The Grand Budapest Hotel.jpg');"></div>
                         <div class="movie-info">
-                            <h3>Hereditary (2018)</h3>
+                            <h3>The Grand Budapest Hotel (2014)</h3>
                             <p><strong>Rating:</strong> ★★★★★</p>
-                            <p>Hereditary is a modern horror film that blends psychological drama with supernatural terror, focusing on the Graham family's unraveling after a series of tragedies. Directed by Ari Aster, the film explores grief, trauma, and family dynamics, with Toni Collette delivering a career-defining performance. Filled with disturbing imagery and a chilling final act, *Hereditary* is a standout horror film that lingers long after viewing. </p>
+                            <p>Wes Anderson’s The Grand Budapest Hotel is a whimsical, visually stunning comedy that combines eccentric characters, rapid-fire dialogue, and a complex, multigenerational plot. Set in a fictional European country between the two World Wars, the film follows the adventures of Gustave H (Ralph Fiennes), the suave, meticulous concierge of the titular hotel, and his protégé Zero (Tony Revolori). The film’s meticulously designed sets and symmetrical shots are trademark Anderson, creating a visually arresting world filled with quirky humor and quirky characters. Fiennes delivers an impeccable performance as Gustave, infusing the character with a perfect mix of charm, wit, and authority. The humor is fast-paced, dry, and often absurd, with Anderson’s signature blend of deadpan delivery and visual gags. While the plot might seem complex at first, it’s a clever, satirical tale of love, theft, and mistaken identity. The ensemble cast, including the likes of Saoirse Ronan, Willem Dafoe, and Adrien Brody, adds layers of charm to this already charming film. The Grand Budapest Hotel is a delightful piece of cinema that’s both visually and emotionally rewarding.</p>
                         </div>
                     </article>
                 </div>
