--- a/fantasy.html
+++ b/fantasy.html
@@ -54,7 +54,7 @@
             <section id="reviews">
                 <div class="movie-grid">
                     <article onclick="location.href='superbad.html';">
-                        <div class="movie-poster" style="background-image: url('picture/Superbad.jpg');"></div>
+                        <div class="movie-poster" style="background-image: url('picture/superbad.jpg');"></div>
                         <div class="movie-info">
                             <h3>Superbad (2007)</h3>
                             <p><strong>Rating:</strong> ★★★★★ </p>
@@ -70,7 +70,7 @@
                         </div>
                     </article>
                     <article onclick="location.href='groundhog_day.html';">
-                        <div class="movie-poster" style="background-image: url('picture/The Big Lebowski.jpg');"></div>
+                        <div class="movie-poster" style="background-image: url('picture/The Big Lebowski.jfif');"></div>
                         <div class="movie-info">
                             <h3>The Big Lebowski (1998)</h3>
                             <p><strong>Rating:</strong> ★★★★☆</p>
@@ -78,15 +78,15 @@
                         </div>
                     </article>
                     <article onclick="location.href='groundhog_day.html';">
-                        <div class="movie-poster" style="background-image: url('picture/Anchorman: The Legend of Ron Burgundy.jpg');"></div>
-                        <div class="movie-info">
+                        <div class="movie-poster" style="background-image: url('picture/Anchorman The Legend of Ron Burgundy.jfif');"></div>
+                        <div class="movie-info
                             <h3>Anchorman: The Legend of Ron Burgundy (2004)</h3>
                             <p><strong>Rating:</strong> ★★★★★</p>
                             <p>Anchorman is an over-the-top, absurd comedy that thrives on its quirky, outlandish characters and rapid-fire gags. Will Ferrell stars as Ron Burgundy, a pompous and clueless news anchor in 1970s San Diego who finds his dominance challenged by a new female reporter, Veronica Corningstone (Christina Applegate). The film is a showcase for Ferrell’s particular brand of manic comedy, which works especially well when paired with a stellar ensemble cast that includes Paul Rudd, Steve Carell, and David Koechner. The script is filled with ridiculous one-liners, running gags, and sheer silliness, from the infamous "I’m kind of a big deal" to the epic "News Team Battle." Anchorman is a parody of 1970s news culture, but it’s also an exercise in absurdity and comedic bravado. It’s hard to overstate how much fun this film is, especially with Ferrell’s over-the-top performance as the oblivious and clueless Ron Burgundy. It’s the kind of comedy that can make you laugh until it hurts, and it’s packed with so many quotable moments that it has become a part of modern pop culture.</p>
                         </div>
                     </article>
                     <article onclick="location.href='groundhog_day.html';">
-                        <div class="movie-poster" style="background-image: url('picture/The Grand Budapest Hotel.jpg');"></div>
+                        <div class="movie-poster" style="background-image: url('picture/The Grand Budapest Hotel.jfif');"></div>
                         <div class="movie-info">
                             <h3>The Grand Budapest Hotel (2014)</h3>
                             <p><strong>Rating:</strong> ★★★★★</p>
